@@ -7,6 +7,7 @@ Changes from v2.2.3 to v2.2.4
 - small compilation fixed for OpenGL on some unix platforms
 - fix for dehacked files which change frames
 - fixed name clash when compiling for some unix platforms
+- flag counted items with different colour on the IDDT automap
 
 Changes from v2.2.2 to v2.2.3
 - improved mouse handling
